# pipeui

./: .gitignore  CLAUDE.md  CLAUDE_REFERENCE.md  CONTEXT.md  LICENSE  ROADMAP.md  design.md  package.json  pyproject.toml  start.sh  vitest.config.js
.claude/: ARCHITECTURE.md  CLAUDE.md  CLAUDE_REFERENCE.md  CONTEXT.md  FEATURE_REQUESTS.md  REFACTOR_PLAN.md  ROADMAP.md  conventions.md  design.md  hub-registry.json  settings.json
.claude/agents/: historian.md  (+1 more)
frontend/: app.jsx  data.jsx  index.html  screen-builder.jsx  screen-data.jsx  screen-modules.jsx  screen-results.jsx  screen-settings.jsx  tweaks-panel.jsx  ui.jsx
pipeui/: duckdb.py  helpers.py  ids.py  main.py  schema.py  source_create.py  staging.py  validation.py
tests/: conftest.py  test_api_export_file.py  test_api_function_sets.py  test_api_migration.py  test_api_pipelines.py  test_api_pipelines_run.py  test_api_results_file.py  test_api_run_all.py  test_api_run_set.py  test_api_settings.py  test_api_sources.py  test_api_staging.py  test_api_validations.py  test_attach.py  test_binding.py  test_builtin_lowering.py  test_builtins.py  test_bundle_pairing.py  test_carriers.py  test_contract.py  test_db_layering.py  test_function_sets.py  test_functions.py  test_ids.py  test_ingestion.py  test_jit_table.py  test_migration.py  test_module_boundaries.py  test_results.py  test_results_report.py  test_run_workflow.py  test_schema.py  test_source_create.py  test_source_read.py  test_sql_engine.py  test_sql_functions.py  test_staging.py  test_type_normalizer.py  test_validation.py  test_worker.py
(+238 files in other folders)
