[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeui*"]

[project]
name = "pipeui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
markers = [
    "unit: pure logic tests — no DB, no subprocess",
    "integration: tests using real DuckDB or subprocess",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27",
]
